# baobab-mtg-deckbuilder

./: 000_specifications.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: dev_diary.md
docs/features/: 01_project_bootstrap.md  02_core_deck_model.md  03_format_constraints_and_validation.md  04_pool_protocols_and_providers.md  05_deck_statistics_and_aggregates.md  06_heuristic_evaluation_metrics.md  07_weighted_scoring_and_explanations.md  08_generation_strategies.md  09_mutation_operators.md  10_optimization_engine.md  11_comparison_and_ranking.md  12_simulation_adapter_and_public_api.md
docs/tests/coverage/: README.md
src/baobab_mtg_deckbuilder/: __init__.py
src/baobab_mtg_deckbuilder/deck/: __init__.py  deck.py  deck_card_entry.py  deck_list_view.py  deck_section.py  deck_summary.py
src/baobab_mtg_deckbuilder/deck_statistics/: __init__.py  card_analytic_profile.py  card_analytic_provider_protocol.py  deck_statistics.py  deck_statistics_result.py
src/baobab_mtg_deckbuilder/evaluation/: __init__.py  card_type_balance_evaluator.py  color_balance_evaluator.py  deck_evaluation.py  deck_evaluation_breakdown.py  deck_evaluation_breakdown_line.py  deck_evaluation_explanation.py  deck_metric.py  deck_score.py  default_metric_weights.py  heuristic_inputs.py  land_ratio_evaluator.py  mana_base_consistency_evaluator.py  mana_curve_evaluator.py  weighted_score_aggregator.py
src/baobab_mtg_deckbuilder/exceptions/: __init__.py  baobab_mtg_deckbuilder_exception.py  deck_configuration_exception.py  deck_evaluation_exception.py  deck_generation_exception.py  deck_mutation_exception.py  deck_optimization_exception.py  deck_simulation_exception.py  deck_validation_exception.py
src/baobab_mtg_deckbuilder/generation/: __init__.py  constrained_generation_strategy.py  deck_candidate.py  deck_generation_request.py  deck_generation_result.py  deck_generation_strategy.py  greedy_generation_strategy.py  hybrid_generation_strategy.py  maindeck_from_pool_builder.py  random_seeded_generation_strategy.py  uniform_deck_generation.py
src/baobab_mtg_deckbuilder/mutation/: __init__.py  adjust_land_count_operator.py  color_fix_operator.py  deck_mutation.py  deck_mutation_context.py  deck_mutation_operator.py  deck_mutation_result.py  deck_replacement_suggestion.py  mutation_support.py  replace_card_operator.py  role_swap_operator.py
src/baobab_mtg_deckbuilder/optimization/: __init__.py  beam_search_optimization_strategy.py  deck_optimization_iteration.py  deck_optimization_request.py  deck_optimization_result.py  deck_optimization_strategy.py  deck_search_state.py  hill_climbing_optimization_strategy.py  iterative_improvement_strategy.py  optimization_evaluation.py  optimization_run_support.py
src/baobab_mtg_deckbuilder/pool/: __init__.py  card_pool.py  card_pool_entry.py  catalog_card_provider_protocol.py  collection_pool_provider_protocol.py
src/baobab_mtg_deckbuilder/validation/: __init__.py  basic_land_oracle_names.py  constructed_format_definition.py  constructed_maindeck_minimum_size_rule.py  constructed_nonbasic_max_copies_rule.py  constructed_sideboard_maximum_size_rule.py  deck_constraint.py  deck_constraint_set.py  deck_validation_issue.py  deck_validation_issue_severity.py  deck_validation_report.py  deck_validation_rule.py  format_definition.py  limited_format_definition.py  limited_maindeck_minimum_size_rule.py  limited_sideboard_information_rule.py  limited_sideboard_size_warning_rule.py  maindeck_minimum_support.py
tests/: __init__.py
tests/baobab_mtg_deckbuilder/: test_package_imports.py  test_tooling_configuration.py
tests/baobab_mtg_deckbuilder/deck/: test_deck.py  test_deck_card_entry.py  test_deck_list_view.py  test_deck_section.py  test_deck_summary.py
tests/baobab_mtg_deckbuilder/deck_statistics/: fake_card_analytic_provider.py  test_card_analytic_profile.py  test_card_analytic_provider_protocol.py  test_deck_statistics.py  test_deck_statistics_result.py
tests/baobab_mtg_deckbuilder/evaluation/: deck_statistics_result_factory.py  test_card_type_balance_evaluator.py  test_color_balance_evaluator.py  test_deck_evaluation.py  (+11 more)
(+50 files in other folders)
