[build-system]
requires = ["setuptools>=68.0,<76.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baobab-mtg-deckbuilder"
version = "0.8.0"
description = "Bibliothèque Python pour construire, évaluer, comparer et optimiser des decks Magic: The Gathering."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Baobab MTG Deckbuilder contributors" }]
keywords = ["mtg", "magic-the-gathering", "deck", "deckbuilder", "optimizer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "bandit>=1.7.0,<2.0.0",
    "black>=24.0.0,<25.0.0",
    "build>=1.0.0,<2.0.0",
    "Flake8-pyproject>=1.2.3,<2.0.0",
    "flake8>=7.0.0,<8.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pylint>=3.0.0,<4.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest>=8.0.0,<9.0.0",
]

[project.urls]
Repository = "https://github.com/baobabgit/baobab-mtg-deckbuilder"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
baobab_mtg_deckbuilder = ["py.typed"]

# --- black ---
[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = "\\.pyi?$"
extend-exclude = "/(docs/tests/coverage)/"

# --- flake8 (via Flake8-pyproject) ---
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "src/baobab_mtg_deckbuilder/__init__.py:F401",
    "src/baobab_mtg_deckbuilder/deck/__init__.py:F401",
    "src/baobab_mtg_deckbuilder/validation/__init__.py:F401",
    "src/baobab_mtg_deckbuilder/pool/__init__.py:F401",
    "src/baobab_mtg_deckbuilder/deck_statistics/__init__.py:F401",
    "src/baobab_mtg_deckbuilder/evaluation/__init__.py:F401",
    "src/baobab_mtg_deckbuilder/generation/__init__.py:F401",
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "docs/tests/coverage",
    "*.egg-info",
]
max-complexity = 12

# --- mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# --- pylint ---
[tool.pylint.main]
jobs = 0
py-version = "3.11"
ignore-paths = ["docs/tests/coverage"]

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 8
max-attributes = 12

[tool.pylint.SIMILARITIES]
# Règles main min construit / limité partagent volontairement la même forme d'appel.
min-similarity-lines = 10

# --- baobab-mtg-deckbuilder (miroir des poids : voir default_metric_weights.py) ---
[tool.baobab_mtg_deckbuilder.evaluation.default_metric_weights]
mana_curve_similarity = 0.2
main_land_ratio = 0.2
wubrg_color_balance = 0.2
mana_data_consistency = 0.2
card_type_diversity = 0.2

# --- bandit ---
[tool.bandit]
exclude_dirs = ["tests", "docs/tests/coverage"]

# --- pytest & coverage ---
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=baobab_mtg_deckbuilder",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html:docs/tests/coverage/html",
    "--cov-report=xml:docs/tests/coverage/coverage.xml",
]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["baobab_mtg_deckbuilder"]
branch = true
data_file = "docs/tests/coverage/.coverage"
relative_files = true

[tool.coverage.report]
fail_under = 90
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "docs/tests/coverage/html"
